--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -2,7 +2,7 @@
 log4j.rootLogger=INFO, file, stdout
 ## 将日志信息输出到文件中
 log4j.appender.file=org.apache.log4j.RollingFileAppender
-log4j.appender.file.File=other/SimOS.log
+log4j.appender.file.File=other/myos.log
 log4j.appender.file.Append=false
 log4j.appender.file.MaxFileSize=10MB
 log4j.appender.file.MaxBackupIndex=10
